<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_design"
    android:transitionName="@string/app_name">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_15"
        android:layout_marginEnd="@dimen/dimen_15"
        android:scaleX="0"
        android:scaleY="0"
        app:cardBackgroundColor="@color/black_effective"
        app:cardCornerRadius="@dimen/dimen_10"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:scaleX="1"
        tools:scaleY="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dimen_15">

            <TextView
                android:id="@+id/tvTitle"
                style="@style/TextAppearanceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@android:color/background_light" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmailId"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:hint="@string/email_id"
                android:textColorHint="@color/box_color_selector"
                app:boxStrokeColor="@android:color/background_light"
                app:endIconDrawable="@drawable/input_layout_clear_drawable"
                app:endIconMode="clear_text"
                app:endIconTint="@android:color/darker_gray"
                app:errorEnabled="true"
                app:hintTextColor="@android:color/background_light">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietEmailId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:textColor="@color/box_color_selector" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:hint="@string/password"
                android:textColorHint="@color/box_color_selector"
                app:boxStrokeColor="@android:color/background_light"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:counterTextColor="@android:color/holo_blue_bright"
                app:endIconMode="password_toggle"
                app:endIconTint="@android:color/darker_gray"
                app:errorEnabled="true"
                app:hintTextColor="@android:color/background_light"
                app:passwordToggleDrawable="@drawable/toggle_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:textColor="@color/box_color_selector" />

            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_20">

                <Button
                    android:id="@+id/btnLogin"
                    style="@style/MaterialButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX="0"
                    android:scaleY="0"
                    android:text="@string/login_here"
                    android:textSize="@dimen/text_13"
                    tools:scaleX="1"
                    tools:scaleY="1" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@style/Widget.AppCompat.ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

            </FrameLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>